<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">File Manager</string>
    <string name="eula">Interush, Inc. (âCompanyâ, âweâ âusâ or âourâ) maintains these Terms of Service (âTOSâ) that describes the terms and conditions applicable to the use of the PHYTTER DOCKâ¢ online storage service made available through www.phytterdock.com (the âSiteâ) and our applications for mobile platforms or devices and our web applications accessible on third party social networking services (âSNSâ) (collectively, our mobile and web applications are referred to herein as, the âApplicationsâ). The Site and Applications are referred to herein collectively, as the âServicesâ. Your use of the Service is subject at all times to these TOS, the Interush, Inc. Privacy Policy (âPrivacy Policyâ) and any additional end user license agreements (the âEULAâ) applicable to software made available to you in connection with the Service (the âSoftwareâ). Any inconsistencies between the TOS, the Privacy Policy or any EULA (if any) shall be resolved by the Company in its sole and absolute discretion.

EACH TIME YOU USE OR ACCESS THE SERVICE, YOU AGREE TO BE BOUND BY THESE TOS AND REPRESENT THAT YOU HAVE READ AND UNDERSTAND THE RIGHTS, OBLIGATIONS, TERMS AND CONDITIONS SET FORTH HEREIN AND AGREE TO BE LEGALLY BOUND BY THEM. IF YOU DO NOT UNDERSTAND OR AGREE TO BE BOUND BY (OR CANNOT COMPLY WITH) THESE TOS, DO NOT USE OR ACCESS THE SERVICE. YOUR CONTINUED ACCESS AND USE OF THE SERVICE SHALL BE DEEMED TO CONSTITUTE YOUR AGREEMENT TO BE LEGALLY BOUND BY THESE TOS, AS THEY MAY BE AMENDED FROM TIME TO TIME. ANY REFERENCES HEREIN TO âYOUâ AND âYOURâ REFER TO BOTH YOU AND SUCH PERSON AND ENTITY ON WHOSE BEHALF YOU ACT, IF ANY.

In some instances, both these TOS and separate terms of service, rules, policies or guidelines set forth additional conditions that may apply to a Service or product offered by the Company (âAdditional Termsâ). To the extent there is a conflict between the TOS and any Additional Terms, the Additional Terms will control unless the Company determines otherwise, in its sole and absolute discretion.</string>
	<string name="updates">1.2.3</string>
<!--     Action Bar Menu Items -->
    <string name="action_settings">Settings</string>
    <string name="action_save">Save</string>
    <string name="action_add">Add</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_grid">Grid</string>
     <string name="action_upload">Upload</string>
    <string name="hello_world">Hello world!</string>
    
<!--     Navigation Drawer Items -->
    <string name="drawer_text">Navigation Drawer example.</string>
    <string name="ns_menu_main_header">Title</string>
    <string name="menu_library">Library</string>
    <string name="menu_app">Application</string>
    <string name="ns_menu_open">Open Menu</string>
    <string name="ns_menu_close">File Manager Drawer</string>
	<string name="menu_home">Home</string>
    <string name="menu_help">Help</string>
    <string name="menu_photos">Pictures</string>
    <string name="menu_music">Music</string>
    <string name="menu_video">Video</string>
    <string name="menu_rate">Rate The App</string>
    <string name="menu_share">Shared</string>
    <string name="menu_shared_by">Shared By Me</string>
    <string name="menu_shared_with">Shared With Me</string>
    
    
<!--     Settings Items -->
	<string name="account_settings">Account Settings</string>
	<string name="used_space">Used Space</string>
	<string name="more">More</string>
	<string name="phytter_user_name">Phytter User Name</string>
	<string name="upgrade_account">Upgrade Account</string>
	<string name="change_password">Change Password</string>
	<string name="logout">Logout</string>
	<string name="camera_auto_upload">Camera Auto Upload</string>
	<string name="auto_upload">Auto Upload</string>
	<string name="upload_over">Upload Over WiFi/Data</string>
	<string name="about">About</string>
	<string name="app_version">App Version</string>
	<string name="send_feedback">Send Feedback</string>
</resources>