<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2013. Humesis, Inc.
  ~  
  ~  Permission is hereby granted, free of charge, to any person
  ~  obtaining a copy of this software and associated documentation
  ~  files (the "Software"), to deal in the Software without
  ~  restriction, including without limitation the rights to use,
  ~  copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~  copies of the Software, and to permit persons to whom the
  ~  Software is furnished to do so, subject to the following
  ~  conditions:
  ~  The above copyright notice and this permission notice shall be
  ~  included in all copies or substantial portions of the Software.
  ~  
  ~  THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
  ~  EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES
  ~  OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
  ~  NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT
  ~  HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
  ~  WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
  ~  FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
  ~  OTHER DEALINGS IN THE SOFTWARE.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/account_settings"
        android:key="account_settings">
        <Preference
            android:key="user_name"
            android:summary="user123-p"
            android:title="@string/phytter_user_name"
            android:defaultValue="false" />
        <Preference
            android:key="used_space"
            android:summary="25.00MB of 2.00GB"
            android:title="@string/used_space"/>

        <Preference
            android:key="upgrade_account"
            android:summary="Current Plan 2.00GB"
            android:title="@string/upgrade_account"/>
        <Preference
            android:key="change_password"
            android:title="@string/change_password"/>
        <Preference
            android:key="logout"
            android:title="@string/logout"/>
    </PreferenceCategory>
</PreferenceScreen>